tests/compile-fail/integration__integration__general__break_outside_loop.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: break outside of a loop
   ┌─ <input>:22:9
   │
22 │         break;
   │         ^^^^^ not valid outside of a loop


